--- a/frontend/public/assets/content/politica/1-ciencia-politica/2.md
+++ b/frontend/public/assets/content/politica/1-ciencia-politica/2.md
@@ -8,7 +8,7 @@ A despersonalização do poder também contribui para a aceitação desse tipo d
 
 ## 2.1 O conceito de poder
 
-O exercício do poder é um processo social, na medida em que indivíduos ou grupos sociais apresentam condições de modificar ou alterar o comportamento de outros grupos ou pessoas. O exercício do poder está diretamente vinculado à cultura dos grupos sociais que estabelecem aquilo que tem ou não valor naquela sociedade particular. Se a força física é valorizada, é ela que se tornará o principal componente do poder. Caso seja a capacidade dos indivíduos em relacionar- -se com a divindade, os sacerdotes terão mais valor e desse modo exercerão mais poder. Em grupos menores, por exemplo num grupo de amigos, terá mais poder aquele que detém os elementos mais valorizados pelo grupo.
+O exercício do poder é um processo social, na medida em que indivíduos ou grupos sociais apresentam condições de modificar ou alterar o comportamento de outros grupos ou pessoas. O exercício do poder está diretamente vinculado à cultura dos grupos sociais que estabelecem aquilo que tem ou não valor naquela sociedade particular. Se a força física é valorizada, é ela que se tornará o principal componente do poder. Caso seja a capacidade dos indivíduos em relacionar-se com a divindade, os sacerdotes terão mais valor e desse modo exercerão mais poder. Em grupos menores, por exemplo num grupo de amigos, terá mais poder aquele que detém os elementos mais valorizados pelo grupo.
 
 **Pág 41**
 
@@ -18,13 +18,13 @@ O exercício do poder constitui-se numa das mais importantes interações sociai
 
 Para Friedrich, “a origem do poder que é uma posse é primordialmente a coação. Quando o detentor de um cargo adquire certa soma de poder, ele adquire também a capacidade de coagir”. Por outro lado, segundo esse mesmo autor, a “origem do poder relacional é bastante consensual e cooperativa. Um líder que procure desenvolver certa organização dependerá muito de um poder dessa espécie. Ele organizará seus seguidores despertando neles o desejo de aderir aos seus objetivos e propósitos”.
 
-O poder sempre implica relação, é a capacidade de decisão sobre o outro. O poder constitui uma relação social. O indivíduo encontra-se com o poder quando a sua conduta não é decidida por ele mesmo, mas uma decisão tomada por outro que é capaz de determinar seu comportamento. Na relação com o outro, pode- -se encontrar uma situação de inferioridade, de igualdade ou de superioridade. O poder supõe uma relação específica de superioridade. Toda situação social que estabelece vínculos de dependência gera algum poder, ou seja, a possibilidade de determinar a conduta do outro, provocando consequências que podem ser benéficas ou prejudiciais. A base essencial do poder está na submissão e no conformismo dos membros do grupo sobre o qual atua.
+O poder sempre implica relação, é a capacidade de decisão sobre o outro. O poder constitui uma relação social. O indivíduo encontra-se com o poder quando a sua conduta não é decidida por ele mesmo, mas uma decisão tomada por outro que é capaz de determinar seu comportamento. Na relação com o outro, pode-se encontrar uma situação de inferioridade, de igualdade ou de superioridade. O poder supõe uma relação específica de superioridade. Toda situação social que estabelece vínculos de dependência gera algum poder, ou seja, a possibilidade de determinar a conduta do outro, provocando consequências que podem ser benéficas ou prejudiciais. A base essencial do poder está na submissão e no conformismo dos membros do grupo sobre o qual atua.
 
 **Pág 42**
 
 Talcott Parsons concebe o poder “como um meio simbólico generalizado que circula de forma muito semelhante ao dinheiro, e cuja posse e uso permitem que as responsabilidades de um cargo com autoridade numa coletividade sejam cumpridas”. E entende autoridade como “a qualidade politicamente crucial de um status numa estrutura social”.
 
-Em outros termos, Parsons entende o poder como “a capacidade que a sociedade tem para mobilizar seus recursos no interesse de seus objetivos definidos como algo sancionado de maneira mais positiva do que permissiva pelo sistema como um todo — objetivos que são afetados pelo interesse público”.* De forma categórica, e simplificada, afirma: “defino o poder como a capacidade de um sistema social para mobilizar recursos para atingir metas coletivas”.º
+Em outros termos, Parsons entende o poder como “a capacidade que a sociedade tem para mobilizar seus recursos no interesse de seus objetivos definidos como algo sancionado de maneira mais positiva do que permissiva pelo sistema como um todo — objetivos que são afetados pelo interesse público”.* De forma categórica, e simplificada, afirma: “defino o poder como a capacidade de um sistema social para mobilizar recursos para atingir metas coletivas”.
 
 Parsons considera o governo como um complexo de atividades que tem a primazia política. Segundo ele, “primordialmente, as organizações governamentais, em suas relações com o resto da sociedade, geram poder e o fornecem às demais partes da sociedade”.
 
@@ -46,7 +46,7 @@ Sartori considera que todo processo político é um “processo de poder”, e q
 
 A maior parte dos cientistas sociais compartilha da ideia de que poder é a capacidade para afetar o comportamento dos outros. O poder pode ser considerado um meio que o grupo ou indivíduo tem de fazer com que as coisas sejam realizadas por outros indivíduos ou grupos.
 
-Para Max Weber, !º “poder significa toda probabilidade de impor a própria vontade numa relação social, mesmo contra resistências, seja qual for o fundamento dessa probabilidade”. Embora de seu ponto de vista considere o poder “sociologicamente amorfo”, podemos encontrar os fundamentos dessa probabilidade num amplo leque que inclui a legitimidade e a não legitimidade.
+Para Max Weber, “poder significa toda probabilidade de impor a própria vontade numa relação social, mesmo contra resistências, seja qual for o fundamento dessa probabilidade”. Embora de seu ponto de vista considere o poder “sociologicamente amorfo”, podemos encontrar os fundamentos dessa probabilidade num amplo leque que inclui a legitimidade e a não legitimidade.
 
 O poder é legítimo quando é aceito e existe a disposição de obediência por parte daqueles que não o detêm. Será ilegítimo o poder quando exercido por indivíduo ou grupo social que não é aceito pelos demais e impõe sua vontade mesmo havendo resistência.
 
@@ -56,7 +56,7 @@ A natureza do poder é complexa, pois muitas vezes se apresenta como uma coisa o
 
 No entanto, o poder político na realidade não é uma coisa, como possa parecer, que pode ser objeto de posse, mas constitui uma relação entre pessoas.
 
-Para Hobbes, o poder pode ser original ou instrumental, e para o homem (universalmente considerado) “consiste nos meios de que presentemente dispõe para obter qualquer visível bem futuro”.!*
+Para Hobbes, o poder pode ser original ou instrumental, e para o homem (universalmente considerado) “consiste nos meios de que presentemente dispõe para obter qualquer visível bem futuro”.
 
 Há diversas fontes de poder, entre as principais estão a força e a autoridade.
 
@@ -136,7 +136,7 @@ Para Maquiavel, a força é o único meio para incrementar e manter o poder. Poi
 
 **Pág 49**
 
-O objetivo fundamental dos escritos de Maquiavel é a capacidade de impor e de ser reconhecido pelos demais e isto nos remete a uma dimensão importante da política atual. O livro O príncipe pode ser visto como um grande tratado da arte de manipulação da imagem, pois, como afirma, não necessita, necessariamente, o governante ter qualidades como ser piedoso, fiel, humanitário, íntegro ou religioso, “sendo suficiente que aparente possuí-las”.? Para Maquiavel, há sempre uma razão de Estado que justifica e em várias ocasiões torna-se necessário o emprego da violência e da crueldade. E aqui, respondendo à questão se mais vale ser amado do que temido, concluirá que é mais importante ser temido do que amado, pois a natureza do homem torna-o ingrato, e logo se voltará contra aquele que ama, porque o amor leva ao excesso de confiança é a falta de respeito, o que não ocorre com o temor. No entanto, adverte que o temor não deve converter-se em ódio ou desprezo para com o príncipe.
+O objetivo fundamental dos escritos de Maquiavel é a capacidade de impor e de ser reconhecido pelos demais e isto nos remete a uma dimensão importante da política atual. O livro O príncipe pode ser visto como um grande tratado da arte de manipulação da imagem, pois, como afirma, não necessita, necessariamente, o governante ter qualidades como ser piedoso, fiel, humanitário, íntegro ou religioso, “sendo suficiente que aparente possuí-las”. Para Maquiavel, há sempre uma razão de Estado que justifica e em várias ocasiões torna-se necessário o emprego da violência e da crueldade. E aqui, respondendo à questão se mais vale ser amado do que temido, concluirá que é mais importante ser temido do que amado, pois a natureza do homem torna-o ingrato, e logo se voltará contra aquele que ama, porque o amor leva ao excesso de confiança é a falta de respeito, o que não ocorre com o temor. No entanto, adverte que o temor não deve converter-se em ódio ou desprezo para com o príncipe.
 
 Considerando ainda a natureza do homem, Maquiavel considera que os governantes não devem, necessariamente, cumprir a palavra empenhada:
 
@@ -176,15 +176,15 @@ Nesse sentido, Max Weber distingue três tipos puros de dominação legítima: a
 
 A dominação legal é baseada em estatutos, obedece-se a ordens impessoais, objetivas e legalmente instituídas e aos superiores por ela designados, não importando a pessoa em si ocupante do cargo ou da posição. “O tipo mais puro de dominação legal é aquele que se exerce por meio de um quadro administrativo burocrático.”
 
-É o tipo de “autoridade que se impõe em razão da legalidade, em razão da crença na validez de um estatuto legal e de uma competência positiva, fundada em regras racionalmente estabelecidas ou, em outros termos, a autoridade fundada na obediência, que reconhece obrigações conformes ao estatuto estabelecido”. É o poder exercido pelo “servidor do Estado”, pelos funcionários públicos e todos que detêm cargos em administrações públicas.?”
+É o tipo de “autoridade que se impõe em razão da legalidade, em razão da crença na validez de um estatuto legal e de uma competência positiva, fundada em regras racionalmente estabelecidas ou, em outros termos, a autoridade fundada na obediência, que reconhece obrigações conformes ao estatuto estabelecido”. É o poder exercido pelo “servidor do Estado”, pelos funcionários públicos e todos que detêm cargos em administrações públicas.
 
 **b) A dominação tradicional**
 
 No caso da dominação tradicional, obedece-se à pessoa nomeada pela tradição e vinculada a esta, em virtude da devoção de hábitos costumeiros. Obedece-se ao senhor “em virtude da dignidade pessoal que lhe atribui a tradição[...]. Não se obedece a estatutos mas à pessoa indicada pela tradição ou pelo senhor tradicionalmente determinado”. Há uma profunda relação de fidelidade pessoal daqueles predispostos a obedecer ao senhor.
 
-O fundamento da legitimidade da dominação tradicional é dado pela “autoridade do “passado eterno”, isto é, dos costumes santificados pela validez imemorial e pelo hábito, enraizado nos homens, de respeitá-los. Tal é o 'poder” tradicional, que o patriarca ou o senhor de terras, outrora, exercia”.ºº
+O fundamento da legitimidade da dominação tradicional é dado pela “autoridade do “passado eterno”, isto é, dos costumes santificados pela validez imemorial e pelo hábito, enraizado nos homens, de respeitá-los. Tal é o 'poder” tradicional, que o patriarca ou o senhor de terras, outrora, exercia”.
 
-A dominação tradicional pode ser exercida com quadro administrativo ou sem ele. No caso do exercício com quadro administrativo, as pessoas serão recrutadas segundo critérios de dependência doméstica ou pessoal (dominação patrimonial).º*! Na ausência do quadro administrativo, ocorre uma situação na qual, dentro de uma associação (doméstica) econômica ou familiar, a dominação é exercida por um indivíduo normalmente designado segundo regras fixas de sucessão (dominação patriarcal).
+A dominação tradicional pode ser exercida com quadro administrativo ou sem ele. No caso do exercício com quadro administrativo, as pessoas serão recrutadas segundo critérios de dependência doméstica ou pessoal (dominação patrimonial). Na ausência do quadro administrativo, ocorre uma situação na qual, dentro de uma associação (doméstica) econômica ou familiar, a dominação é exercida por um indivíduo normalmente designado segundo regras fixas de sucessão (dominação patriarcal).
 
 **Pág 52**
 
@@ -192,7 +192,7 @@ A dominação tradicional pode ser exercida com quadro administrativo ou sem ele
 
 Nesse outro tipo ideal de dominação, a carismática, a autoridade “se funda em dons pessoais e extraordinários de um indivíduo (carisma) — devoção e confiança estritamente pessoais depositadas em alguém que se singulariza por qualidades prodigiosas, por heroísmo ou por outras qualidades exemplares que dele fazem o chefe”. “Esse é o poder carismático, exercido pelo profeta ou — no domínio político — pelo dirigente guerreiro eleito, pelo soberano escolhido através de plebiscito, pelo grande demagogo ou pelo dirigente de um partido político.”
 
-Na dominação carismática, obedece-se ao líder carismaticamente qualificado como tal, em virtude de confiança pessoal em revelação, heroísmo ou exemplaridade dentro do âmbito da crença nesse seu carisma. A associação de dominação dos adeptos é uma relação comunitária de caráter emocional. O quadro administrativo do senhor carismático é selecionado segundo critérios de “qualidades carismáticas: ao profeta correspondem os discípulos; ao príncipe guerreiro, o séquito; ao líder, em geral, os homens de confiança”. Uma das manifestações de dominação carismática, bastante comum nos Estados latino- -americanos, é o populismo, que estabelece estreita ligação entre o líder e as massas diretamente sem intermediação de qualquer organização política. No Brasil, lideranças populistas históricas foram Getúlio Vargas e Jânio Quadros. Na Argentina, Juan Domingo Perón.
+Na dominação carismática, obedece-se ao líder carismaticamente qualificado como tal, em virtude de confiança pessoal em revelação, heroísmo ou exemplaridade dentro do âmbito da crença nesse seu carisma. A associação de dominação dos adeptos é uma relação comunitária de caráter emocional. O quadro administrativo do senhor carismático é selecionado segundo critérios de “qualidades carismáticas: ao profeta correspondem os discípulos; ao príncipe guerreiro, o séquito; ao líder, em geral, os homens de confiança”. Uma das manifestações de dominação carismática, bastante comum nos Estados latino-americanos, é o populismo, que estabelece estreita ligação entre o líder e as massas diretamente sem intermediação de qualquer organização política. No Brasil, lideranças populistas históricas foram Getúlio Vargas e Jânio Quadros. Na Argentina, Juan Domingo Perón.
 
 A dominação carismática, como algo extraordinário, opõe-se estritamente tanto à dominação racional, especialmente a burocrática, quanto à tradicional, especialmente a patriarcal e patrimonial ou a estamental. Ambas são formas de dominação cotidianas — a carismática (genuína) é especificamente o contrário. A dominação burocrática é especificamente racional no sentido da vinculação a regras perfeitamente identificáveis; a carismática é especificamente irracional no sentido de não conhecer regras. A dominação tradicional está vinculada aos precedentes do passado e, nesse sentido, é também orientada por regras — baseada nos costumes, na tradição —; a carismática derruba o passado (dentro de seu âmbito) e, nesse sentido, é especificamente revolucionária. “Esta não conhece a apropriação do poder senhorial ao modo de uma propriedade de bens, seja pelo senhor, seja por poderes estamentais. Só é legítima” enquanto e na medida em que “vale”, isto é, encontra reconhecimento, o carisma pessoal, em virtude de provas; e os homens de confiança, discípulos ou sequazes só lhe são “úteis” enquanto tem vigência sua confirmação carismática.”
 
@@ -234,7 +234,7 @@ Na atualidade, a simples submissão à legalidade não é suficiente para tornar
 
 ## 2.7 As elites e o poder
 
-Considera-se elite uma categoria de pessoas que se destacam em determinado setor ou atividade social. De acordo com o dicionário Houaiss, a elite é o que há de mais valorizado e de melhor qualidade num grupo social. Ou, ainda, uma minoria que detém o prestígio e o domínio sobre um grupo social.º*
+Considera-se elite uma categoria de pessoas que se destacam em determinado setor ou atividade social. De acordo com o dicionário Houaiss, a elite é o que há de mais valorizado e de melhor qualidade num grupo social. Ou, ainda, uma minoria que detém o prestígio e o domínio sobre um grupo social.
 
 Em outros termos podemos definir elite como um grupo de indivíduos pouco numeroso, que apresenta características, interesses ou sentimentos comuns que os mantêm unidos, e tem a capacidade de se destacar do restante das pessoas devido a uma série de características singulares.
 
@@ -278,7 +278,7 @@ Pareto parte da ideia de que todos os homens são desiguais entre si em todos os
 
 Pareto desenvolve a teoria da circulação das elites (teorema de Pareto), onde apresenta o processo dinâmico de formação e substituição das elites. Para ele, em toda sociedade é um fato permanente e inevitável a presença de uma elite no poder e a sucessiva substituição que ocorre entre as elites. Há um movimento permanente que eleva os indivíduos até os postos superiores, deslocando outros para os inferiores.
 
-O teorema de Pareto sobre a “circulação das elites” tornou-se famoso, e coincide plenamente com a concepção de Mosca de que em todas as épocas e em todas as sociedades os homens podem dividir-se em duas camadas: uma camada inferior numerosa e uma camada superior, relativamente pequena mas politicamente poderosa. Esta última camada se subdivide, por sua vez, em uma elite governante e uma elite não governante. A teoria da circulação das elites designa o fenômeno de que a estrutura e a composição da camada governante sempre estão submetidas a mudanças contínuas. Levando em consideração que a força propulsora da camada aristocrática superior diminui periodicamente, é necessário, segundo essa teoria, que alguns membros das camadas inferiores ascendam à classe governante. Como regra geral, essa circulação das elites se desenvolve de forma lenta, de tal modo que não ocorra nenhum desequilíbrio notável da sociedade. No entanto, caso as camadas superiores ainda não estejam constituídas com um número suficiente de indivíduos decididos a usar da força e a consolidar seu poder político, pode ocorrer que as camadas inferiores produzam a partir delas mesmas novas elites. Dessa forma estão dadas, segundo Pareto, as condições para o nascimento das revoluções. Mas mesmo no caso destas revoluções fica confirmada a regra de que em qualquer caso somente uns poucos dirigem as massas. Dessa forma, depois de concluídas as revoluções, se reconstitui o velho dualismo entre elites e massas, pois somente aquelas dispõem de capacidade suficiente para manter um poder político, enquanto estas nasceram para obedecer?!
+O teorema de Pareto sobre a “circulação das elites” tornou-se famoso, e coincide plenamente com a concepção de Mosca de que em todas as épocas e em todas as sociedades os homens podem dividir-se em duas camadas: uma camada inferior numerosa e uma camada superior, relativamente pequena mas politicamente poderosa. Esta última camada se subdivide, por sua vez, em uma elite governante e uma elite não governante. A teoria da circulação das elites designa o fenômeno de que a estrutura e a composição da camada governante sempre estão submetidas a mudanças contínuas. Levando em consideração que a força propulsora da camada aristocrática superior diminui periodicamente, é necessário, segundo essa teoria, que alguns membros das camadas inferiores ascendam à classe governante. Como regra geral, essa circulação das elites se desenvolve de forma lenta, de tal modo que não ocorra nenhum desequilíbrio notável da sociedade. No entanto, caso as camadas superiores ainda não estejam constituídas com um número suficiente de indivíduos decididos a usar da força e a consolidar seu poder político, pode ocorrer que as camadas inferiores produzam a partir delas mesmas novas elites. Dessa forma estão dadas, segundo Pareto, as condições para o nascimento das revoluções. Mas mesmo no caso destas revoluções fica confirmada a regra de que em qualquer caso somente uns poucos dirigem as massas. Dessa forma, depois de concluídas as revoluções, se reconstitui o velho dualismo entre elites e massas, pois somente aquelas dispõem de capacidade suficiente para manter um poder político, enquanto estas nasceram para obedecer.
 
 **Wright Mills**
 
