--- a/frontend/public/assets/content/planejamento/2-decreto-7276/1.md
+++ b/frontend/public/assets/content/planejamento/2-decreto-7276/1.md
@@ -6,9 +6,9 @@ O PRESIDENTE DA REPÚBLICA, no uso das atribuições que lhe confere o art. 84, 
 
 DECRETA:
 
-Art. 1º  Fica aprovada a Estrutura Militar de Defesa, com vistas ao preparo e ao emprego do Poder Militar de acordo com os preceitos legais.
+⚖️  **Art. 1º  Fica aprovada a Estrutura Militar de Defesa, com vistas ao preparo e ao emprego do Poder Militar de acordo com os preceitos legais.
 
-Art. 2º  A Estrutura Militar de Defesa possui a seguinte composição:
+⚖️  **Art. 2º  A Estrutura Militar de Defesa possui a seguinte composição:
 
 I - Presidente da República;
 
@@ -26,7 +26,7 @@ VI - Comandantes dos Comandos Operacionais.
 
 § 2º  Os Comandos Operacionais poderão ser conjuntos, quando houver a participação de meios ponderáveis de mais de uma Força, ou singulares, conforme as necessidades de preparo ou de emprego e a critério da autoridade responsável pela ativação deles.
 
-Art. 3º  Às autoridades e aos órgãos componentes da Estrutura Militar de Defesa compete, além daquelas responsabilidades previstas em legislação específica:
+⚖️  **Art. 3º  Às autoridades e aos órgãos componentes da Estrutura Militar de Defesa compete, além daquelas responsabilidades previstas em legislação específica:
 
 I - ao Presidente da República:
 
@@ -86,19 +86,19 @@ b) planejar, controlar, coordenar e executar o emprego das forças sob seu coman
 
 c) planejar, controlar, coordenar e executar exercícios, em consonância com as diretrizes emanadas do Ministro de Estado da Defesa.
 
-Art. 4º  A cada Comando Operacional ativado será atribuída uma área de responsabilidade, correspondente a um espaço geográfico, na qual o Comandante terá autoridade para as operações militares.
+⚖️  **Art. 4º  A cada Comando Operacional ativado será atribuída uma área de responsabilidade, correspondente a um espaço geográfico, na qual o Comandante terá autoridade para as operações militares.
 
 § 1º  As circunstâncias e limitações, sob as quais serão empregados os Comandos Operacionais, deverão constar da diretriz emitida pelo Presidente da República.
 
 § 2º  Nos casos de emprego de forças sob a égide de organismos internacionais, as definições de área de responsabilidade e de limites de atuação ficarão a cargo das respectivas autoridades, ressalvadas as vedações previstas na legislação brasileira.
 
-Art. 5º  O Ministério da Defesa definirá núcleos de Estados-Maiores Conjuntos, coordenados pelo Estado-Maior Conjunto das Forças Armadas.
+⚖️  **Art. 5º  O Ministério da Defesa definirá núcleos de Estados-Maiores Conjuntos, coordenados pelo Estado-Maior Conjunto das Forças Armadas.
 
 Parágrafo único.  Os núcleos de que trata o caput serão ativados, desde o tempo de paz, para a elaboração e a atualização do planejamento e do adestramento operacionais que atendam ao estabelecido nos planos estratégicos.
 
-Art. 6º  A organização e o funcionamento da Estrutura Militar de Defesa serão disciplinados pelo Ministro de Estado da Defesa.
+⚖️  **Art. 6º  A organização e o funcionamento da Estrutura Militar de Defesa serão disciplinados pelo Ministro de Estado da Defesa.
 
-Art. 7º  Este Decreto entra em vigor na data de sua publicação.
+⚖️  **Art. 7º  Este Decreto entra em vigor na data de sua publicação.
 
 Brasília, 25 de agosto de 2010; 189o da Independência e 122o da República.
 
